# ghostPostRESTapi

./: .gitignore  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py
ghostPostapi/: asgi.py  settings.py  urls.py  wsgi.py
